--- a/src/app/dashboard/detail-user/detail-user.component.html
+++ b/src/app/dashboard/detail-user/detail-user.component.html
@@ -44,6 +44,6 @@
 
 <ng-template #extraTemplate>
   <button nz-button (click)="routerReturn()">
-    <i nz-icon nzType="ordered-list" nzTheme="outline"></i>
+    <i nz-icon nzType="rollback" nzTheme="outline"></i>
   </button>
 </ng-template>
