--- a/src/app/dashboard/table-kunjungan/main-table.component.html
+++ b/src/app/dashboard/table-kunjungan/main-table.component.html
@@ -1,17 +1,5 @@
 <nz-card>
   <nz-spin nzTip="Loading..." [nzSpinning]="isSpinning">
-    <div class="flex-layout" style="display: flex">
-      <button nz-button nzSize="large" (click)="routerReturn()">
-        <i nz-icon nzType="rollback" nzTheme="outline"></i>
-      </button>
-      <input
-        readOnly
-        nz-input
-        [(ngModel)]="idSharedData"
-        nzSize="large"
-        style="width: 150px; margin-bottom: 30px; margin-left: 10px"
-      />
-    </div>
     <nz-table
       #basicTable
       [nzData]="dataTamu"
@@ -21,9 +9,9 @@
       <thead>
         <tr>
           <th>No</th>
-          <th>Nama Lengkap</th>
-          <th>Instansi</th>
+          <th>Tanggal Kunjungan</th>
           <th>Jam Kunjungan</th>
+          <th>Tamu</th>
           <th>Action</th>
         </tr>
       </thead>
@@ -31,17 +19,17 @@
       <tbody>
         <tr *ngFor="let data of basicTable.data">
           <td>{{ data.id }}</td>
+          <td>{{ data.date }}</td>
+          <td>{{ data.time }}</td>
           <td>{{ data.fullName }}</td>
-          <td>{{ data.instansi }}</td>
-          <td>{{ data.jamKunjung }}</td>
           <td>
             <button
               nz-button
               nzType="dashed"
               nzShape="circle"
-              [routerLink]="['/detailTamu', data.tanggalKunjung, data.id]"
+              [routerLink]="['/kunjungan/detail/', data.id]"
             >
-              <i nz-icon nzType="eye"></i>
+              <i nz-icon nzType="file-search"></i>
             </button>
           </td>
         </tr>
