--- a/src/app/home/welcome/welcome.component.html
+++ b/src/app/home/welcome/welcome.component.html
@@ -8,7 +8,12 @@
   </div>
 
   <div class="flex">
-    <button nz-button nzType="primary" routerLink="/form" class="fbt-btn">
+    <button
+      nz-button
+      nzType="primary"
+      routerLink="/kunjungan/form"
+      class="fbt-btn"
+    >
       FORM BUKU TAMU
     </button>
     <p>SILAHKAN ISI FORM BUKU TAMU</p>
