--- a/src/theme.less
+++ b/src/theme.less
@@ -79,6 +79,19 @@
   max-height: 10000px;
 }
 
+.form-layout{
+  .ant-tabs-tab .anticon{
+    background-color: #efefef;
+    padding: 8px;
+    border-radius: 5px;
+  }
+
+}
+
+.ant-tabs-content {
+  height: 100%;
+}
+
 @media screen and (min-width: 1280px) {
   .ant-steps {
     height: 635px !important;
