--- a/src/app/dashboard/new-user/new-user.component.html
+++ b/src/app/dashboard/new-user/new-user.component.html
@@ -1,4 +1,4 @@
-<nz-card nzTitle="Add New User" [nzExtra]="extraTemplate">
+<nz-card>
   <nz-spin nzTip="Loading..." [nzSpinning]="isSpinning">
     <form
       nz-form
@@ -93,9 +93,3 @@
     </form>
   </nz-spin>
 </nz-card>
-
-<ng-template #extraTemplate>
-  <button nz-button [routerLink]="['../table']">
-    <i nz-icon nzType="ordered-list" nzTheme="outline"></i>
-  </button>
-</ng-template>
