--- a/src/app/shared/camera-section/camera-section.component.html
+++ b/src/app/shared/camera-section/camera-section.component.html
@@ -1,63 +1,93 @@
-<div class="desktop-view" *ngIf="!isMobileView">
-  <div class="webcam" *ngIf="!webcamImage">
-    <webcam
-      [height]="800"
-      [width]="980"
-      [trigger]="triggerObservable"
-      (imageCapture)="handleImage($event)"
-    ></webcam>
-    <button
-      nz-button
-      class="captureBtn"
-      nzType="default"
-      nzSize="large"
-      nzShape="circle"
-      (click)="triggerSnapshot()"
-      [disabled]="disableBtn"
+<div nz-row style="height: 100%; align-content: space-between">
+  <div nz-col nzSpan="22" nzOffset="1">
+    <div class="step-header">
+      <p nz-typography nzType="secondary">Step 3/5</p>
+      <h1>Photo Selfie</h1>
+    </div>
+  </div>
+  <div nz-col nzSpan="22" nzOffset="1">
+    <div class="desktop-cam" *ngIf="!isMobileView">
+      <div class="webcam" *ngIf="!webcamImage && !storedImage">
+        <webcam
+          [height]="290"
+          [trigger]="triggerObservable"
+          (imageCapture)="handleImage($event)"
+          (initError)="handleInitError($event)"
+        ></webcam>
+      </div>
+    </div>
+    <div class="mobile-cam" *ngIf="isMobileView">
+      <div class="webcam" *ngIf="!webcamImage && !storedImage">
+        <webcam
+          [height]="450"
+          [trigger]="triggerObservable"
+          (imageCapture)="handleImage($event)"
+        ></webcam>
+      </div>
+    </div>
+    <div class="snapshot" *ngIf="webcamImage && !storedImage">
+      <img
+        nz-image
+        height="290px"
+        [nzSrc]="webcamImage.imageAsDataUrl"
+        alt="selfie-img"
+      />
+    </div>
+    <div
+      class="snapshot"
+      *ngIf="(storedImage && webcamImage) || (storedImage && !webcamImage)"
     >
-      <i nz-icon nzType="camera" nzTheme="outline"></i>
-    </button>
+      <img
+        nz-image
+        height="290px"
+        [nzSrc]="'data:image/jpeg;base64,' + storedImage"
+        alt="selfie-img"
+      />
+    </div>
   </div>
-  <div class="snapshot" *ngIf="webcamImage">
-    <img [src]="webcamImage.imageAsDataUrl" />
-
-    <nz-button-group nzSize="large">
-      <button nz-button nzType="text" nzDanger (click)="resetImage()">
-        RETAKE SELFIE
-      </button>
-      <button nz-button nzType="primary" (click)="nextBtn()">NEXT</button>
-    </nz-button-group>
-  </div>
-</div>
-
-<div class="mobile-view" *ngIf="isMobileView">
-  <div class="webcam" *ngIf="!webcamImage">
-    <button
-      nz-button
-      class="captureBtn"
-      nzType="default"
-      nzSize="large"
-      (click)="triggerSnapshot()"
-      [disabled]="disableBtn"
-    >
-      <i nz-icon nzType="camera" nzTheme="outline"></i>
-    </button>
-    <webcam
-      [height]="650"
-      [width]="300"
-      [mirrorImage]="never"
-      [trigger]="triggerObservable"
-      (imageCapture)="handleImage($event)"
-    ></webcam>
-  </div>
-  <div class="snapshot" *ngIf="webcamImage">
-    <img [src]="webcamImage.imageAsDataUrl" />
-
-    <nz-button-group nzSize="large">
-      <button nz-button nzType="text" nzDanger (click)="resetImage()">
-        RETAKE SELFIE
-      </button>
-      <button nz-button nzType="primary" (click)="nextBtn()">NEXT</button>
-    </nz-button-group>
+  <nz-divider style="margin-top: 0"></nz-divider>
+  <div nz-col nzSpan="22" nzOffset="1">
+    <div nz-row nzJustify="end">
+      <nz-button-group nzSize="large">
+        <div
+          [ngStyle]="
+            !webcamImage && !storedImage
+              ? { display: 'block' }
+              : { display: 'none' }
+          "
+        >
+          <button
+            nz-button
+            nzType="primary"
+            class="next-btn"
+            (click)="triggerSnapshot()"
+          >
+            Capture
+          </button>
+        </div>
+        <div
+          [ngStyle]="
+            webcamImage || storedImage
+              ? { display: 'block' }
+              : { display: 'none' }
+          "
+        >
+          <button nz-button nzType="text" nzDanger (click)="resetImage()">
+            Photo Ulang
+          </button>
+          <button nz-button nzType="text" class="next-btn" (click)="backBtn()">
+            Kembali
+          </button>
+          <button
+            nz-button
+            nzType="primary"
+            class="next-btn"
+            (click)="nextBtn()"
+          >
+            Selanjutnya
+          </button>
+        </div>
+      </nz-button-group>
+    </div>
   </div>
 </div>
