--- a/src/app/shared/form-section/form-section.component.scss
+++ b/src/app/shared/form-section/form-section.component.scss
@@ -1,88 +1,64 @@
-@media screen and (min-width: 1280px) {
-  nz-date-picker {
-    width: 325px;
+.step-header {
+  * {
+    margin: 0;
   }
-
-  .large-select {
-    width: 70px;
-  }
-
-  .ant-input {
-    border-color: #ffbc4f;
-  }
-
-  .ant-input-disabled {
-    border-color: #d9d9d9;
-  }
-
-  .ant-form-item-has-error .ant-input,
-  .ant-form-item-has-error .ant-input-affix-wrapper,
-  .ant-form-item-has-error .ant-input:hover,
-  .ant-form-item-has-error .ant-input-affix-wrapper:hover {
-    border-color: #ff4d4f;
-  }
-
-  .ant-select:not(.ant-select-customize-input) .ant-select-selector {
-    border-color: #ffbc4f;
-  }
-
-  .flex {
-    display: flex;
-
-    nz-form-item {
-      &:nth-of-type(2) {
-        width: 350px;
-        margin-left: 5rem;
-      }
-    }
-  }
-
-  .last-flex {
-    width: 980px;
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-
-    nz-button-group {
-      button {
-        height: 47px;
-
-        &:nth-of-type(1) {
-          margin-right: 20px;
-        }
-        &:nth-of-type(2) {
-          width: 80px;
-          border-radius: 4px;
-          margin-right: 5px;
-        }
-      }
-    }
-  }
-
-  nz-form-item {
-    width: 550px;
-  }
-
-  .input-number {
-    width: 325px;
-    margin-bottom: 15px !important;
+  margin-top: 2rem;
+  h1 {
+    font-family: "PoppinsBlack";
   }
 }
 
-@media screen and (max-width: 750px) {
-  .input-hidden {
-    display: none;
-  }
+.ant-divider-inner-text {
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.45);
+}
 
-  .input-number {
-    width: 100% !important;
-  }
+nz-date-picker {
+  width: 100%;
+  height: 48px;
+  border-radius: 6px;
+}
 
-  nz-date-picker {
-    width: 100%;
-  }
+.large-select {
+  height: 48px;
+  border-radius: 6px;
+}
 
-  .last-flex {
-    padding-bottom: 50px;
-  }
+.ant-select-single.ant-select-lg:not(.ant-select-customize-input)
+  .ant-select-selector::after,
+.ant-select-single.ant-select-lg:not(.ant-select-customize-input)
+  .ant-select-selector
+  .ant-select-selection-item,
+.ant-select-single.ant-select-lg:not(.ant-select-customize-input)
+  .ant-select-selector
+  .ant-select-selection-placeholder {
+  line-height: 48px;
+}
+
+.ant-input {
+  height: 48px;
+  border-radius: 6px;
+  border-color: #ffbc4f;
+}
+
+.ant-input-disabled {
+  border-color: #d9d9d9;
+}
+
+.ant-form-item-has-error .ant-input,
+.ant-form-item-has-error .ant-input-affix-wrapper,
+.ant-form-item-has-error .ant-input:hover,
+.ant-form-item-has-error .ant-input-affix-wrapper:hover {
+  border-color: #ff4d4f;
+}
+
+.ant-select:not(.ant-select-customize-input) .ant-select-selector {
+  border-color: #ffbc4f;
+}
+
+.next-btn {
+  height: 56px !important;
+  border-radius: 6px !important;
+  padding: 8px 32px !important;
+  margin-left: 8px !important;
 }
