--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,23 @@
   font-family: "Poppins";
 }
 
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	background-color: #000000;
+}
+
 nz-card {
   box-shadow: 0 4px 8px rgb(0 0 0 / 3%);
   border-radius: 3px;
